[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Next Prev.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.247059, 0.00392157, 0.00392157, 1 )

[node name="Main" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Center" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBox" type="VBoxContainer" parent="Center"]
margin_left = 477.0
margin_top = 269.0
margin_right = 547.0
margin_bottom = 331.0

[node name="CardName" type="Label" parent="Center/VBox"]
margin_right = 70.0
margin_bottom = 14.0
text = "Card Name"
valign = 1

[node name="PrevButton" type="Button" parent="Center/VBox"]
margin_left = 15.0
margin_top = 18.0
margin_right = 55.0
margin_bottom = 38.0
size_flags_horizontal = 4
text = "Prev"

[node name="NextButton" type="Button" parent="Center/VBox"]
margin_left = 14.0
margin_top = 42.0
margin_right = 56.0
margin_bottom = 62.0
size_flags_horizontal = 4
text = "Next"

[connection signal="button_up" from="Center/VBox/PrevButton" to="." method="_on_PrevButton_button_up"]
[connection signal="button_up" from="Center/VBox/NextButton" to="." method="_on_Button_button_up"]
